resources/less/virkailija-application.less
/* ... */
.application-handling__review-details-icon {
  font-size: 26px;
}

.application-handling__review-details-remove-link {
  color: @gray-of-the-beast;
  margin-top: 10px;
  position: absolute;
  top: -20px;
  right: -13px;
}

.application-handling__review-details-remove-link:hover {
  color: @link-color;
}

.application-handling__review-details-remove-link--disabled {
  pointer-events: none;
  cursor: auto;
}

.application-handling__review-row--notes-row {
  display: flex;
  flex-flow: row nowrap;
}

.application-handling__review-note-input {
  font-size: 14px;
  padding: 6px;
  border: 1px solid @section-gray-border;
  border-radius: 2px;
  flex-grow: 1;
}

.application-handling__review-note-submit-button {
  color: @white;
  border-radius: 3px;
  box-shadow :none;
  padding: 5px;
  height: 41px;
  margin-left: 10px;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  border: none;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  flex: 0 1 130px;
}

.application-handling__review-note-submit-button--disabled {
  background-color: @section-gray-border
}

.application-handling__review-note-submit-button--enabled {
  background-color: @link-color;
  cursor: pointer;
}

.application-handling__link-button {
  background-color: @link-color;
  border-radius: 3px;
  color: @white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 41px;
}

.application-handling__link-button[disabled] {
  cursor: default;
  background-color: @sg-gray-lighten-3;
}

.application-handling__edit-link {
  width: 100%;
  margin-bottom: 10px;
}

.application-handling__information-request-container {
  padding: 15px;
  background-color: @element-header-background;
  border-radius: 3px;
  margin-bottom: 15px;
}

.application-handling__information-request-show-container-link {
  margin-bottom: 15px;
}

.application-handling__information-request-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 600;
}

.application-handling__information-request-header:not(:last-of-type) {
  margin-bottom: 8px;
}

.application-handling__information-request-row {
  position: relative;
}

.application-handling__information-request-row--checkmark-container {
  height: 100px;
}

.application-handling__information-request-row:not(:last-of-type) {
  display: flex;
  margin-bottom: 11px;
}

.application-handling__information-request-close-button {
  color: #C2C2C2;
  cursor: pointer;
  font-size: 18px;
}

.application-handling__information-request-text-input-container {
  flex-grow: 1;
}

.application-handling__information-request-text-input {
  width: 100%;
  font-size: 14px;
  padding: 4px 8px;
  color: #1A1919;
  border: 1px solid #ccc;
  border-radius: 2px;
}

.application-handling__information-request-message-area {
  width: 100%;
  height: 100px;
  font-size: 14px;
  padding: 4px 8px;
  color: #1A1919;
  border: 1px solid #ccc;
  border-radius: 2px;
}

.application-handling__send-information-request-button {
  color: @white;
  border-radius: 3px;
  box-shadow :none;
  padding: 5px;
  height: 41px;
  width: 100%;
  margin-right: 0;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  border: none;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
}

.application-handling__button--disabled {
  cursor: auto;
}

.application-handling__button:not(:last-child) {
  margin-bottom: 10px;
}

.application-handling__resend-modify-link-confirmation {
  background-color: @button-green;
  border-radius: 3px;
  color: @white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 41px;
  position: absolute;
  width: 372px;
}

.application-handling__resend-modify-link-confirmation-indicator {
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid @button-green;
  position: absolute;
  left: 32px;
  top: -10px;
}

.application-handling__resend-modify-application-link-email-text {
  font-size: 13px;
}

.application-handling__send-information-request-button--enabled {
  background-color: @link-color;
}

.application-handling__send-information-request-button--disabled {
  background-color: @section-gray-border;
}

.application-handling__send-information-request-button--cursor-pointer {
  cursor: pointer;
}

.application-handling__send-information-request-button--cursor-default {
  cursor: default;
}

.application-handling__information-request-info-heading {
  flex-basis: 95px;
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  margin-right: 10px;
}

@information-request-loader-height: 75px;
@information-request-checkmark-height: @information-request-loader-height - 21px;
@information-request-checkmark-width: @information-request-checkmark-height / 2;

.application-handling__information-request-submitted-checkmark {
  animation-duration: 800ms;
  animation-timing-function: ease;
  animation-name: checkmark;
  transform: scaleX(-1) rotate(135deg);
  opacity: 1;
  height: @information-request-checkmark-height;
  width: @information-request-checkmark-width;
  transform-origin: left top;
  border-right: 2px solid #60B660;
  border-top: 2px solid #60B660;
  content: '';
  position: absolute;
  top: 38px;
  left: 147px;
}

.application-handling__information-request-submitted-loader {
  width: @information-request-loader-height;
  height: @information-request-loader-height;
  border-radius: 50%;
  margin: 0 10px 0 10px;
  background-color: #60B660;
  position: absolute;
  left: 128px;
  top: -4px;
}

.application-handling__information-request-submitted-loader:after {
  border-radius: 50%;
  background-color: @element-header-background;
  width: @information-request-loader-height - 4px;
  height: @information-request-loader-height - 4px;
  margin: 0 10px 0 10px;
  content: ' ';
  position: absolute;
  left: -8px;
  top: 2px;
}
/* ... */

